# serializer version: 1
# name: test_cflscoreboard[api_error_invalid_league]
  dict({
    'api_message': None,
    'api_url': 'https://cflscoreboard.cfl.ca/json/scoreboard/rounds.json',
    'attribution': 'Data provided by cflscoreboard.cfl.ca',
    'balls': None,
    'clock': '11:00',
    'date': '2026-05-23T20:00:00+00:00',
    'down_distance_text': None,
    'event_id': '6584',
    'event_name': 'TOR@HAM',
    'event_url': None,
    'friendly_name': 'api_error_invalid_league',
    'icon': 'mdi:scoreboard',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': None,
    'league_path': 'INVALID_LEAGUE_PATH',
    'location': None,
    'odds': 'TOR +155',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'HAM',
    'opponent_colors': list([
      '#D3D3D3',
      '#A9A9A9',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '83579',
    'opponent_logo': None,
    'opponent_long_name': 'Hamilton Tiger-Cats',
    'opponent_name': 'Hamilton Tiger-Cats',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': 7,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': 2,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 3,
    'season': 'PRE',
    'series_summary': None,
    'sport': 'football',
    'sport_path': 'cflscoreboard',
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'TOR',
    'team_colors': list([
      '#D3D3D3',
      '#A9A9A9',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '122345',
    'team_logo': None,
    'team_long_name': 'Toronto Argonauts',
    'team_name': 'Toronto Argonauts',
    'team_rank': None,
    'team_record': None,
    'team_score': 0,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': 2,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': None,
    'venue': None,
  })
# ---
# name: test_cflscoreboard[test_in]
  dict({
    'api_message': None,
    'api_url': 'https://cflscoreboard.cfl.ca/json/scoreboard/rounds.json',
    'attribution': 'Data provided by cflscoreboard.cfl.ca',
    'balls': None,
    'clock': '00:34',
    'date': '2026-05-23T21:00:00+00:00',
    'down_distance_text': None,
    'event_id': '6586',
    'event_name': 'EDM@BC',
    'event_url': 'https://www.cfl.ca/games/6586',
    'friendly_name': 'test_in',
    'icon': 'mdi:scoreboard',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://1000logos.net/wp-content/uploads/2021/06/Canadian-Football-League-CFL-logo-500x281.png',
    'league_name': 'Canadian Football League',
    'league_path': 'cfl',
    'location': None,
    'odds': 'EDM -115',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'BC',
    'opponent_colors': list([
      '#F15A22',
      '#000000',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '93775',
    'opponent_logo': 'https://gsm-shared-assets.betstream.betgenius.com/shared/assets/sports/american-football/competitors/logos/svg/93775.svg',
    'opponent_long_name': 'BC Lions',
    'opponent_name': 'Lions',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': 7,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': 2,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.bclions.com',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': True,
    'quarter': 1,
    'season': 'PRE',
    'series_summary': None,
    'sport': 'football',
    'sport_path': 'cflscoreboard',
    'state': 'IN',
    'strikes': None,
    'team_abbr': 'EDM',
    'team_colors': list([
      '#006341',
      '#FFB81C',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '114347',
    'team_logo': 'https://gsm-shared-assets.betstream.betgenius.com/shared/assets/sports/american-football/competitors/logos/svg/114347.svg',
    'team_long_name': 'Edmonton Elks',
    'team_name': 'Elks',
    'team_rank': None,
    'team_record': None,
    'team_score': 10,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': 2,
    'team_total_shots': None,
    'team_url': 'https://www.goelks.com',
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': None,
    'venue': None,
  })
# ---
# name: test_cflscoreboard[test_invalid_team]
  dict({
    'api_message': "No competition scheduled for 'INVALID_TEAM_ID' in CFL 'Preseason Week 2' between 2026-05-22T00:00Z and 2026-05-23T23:59Z",
    'api_url': 'https://cflscoreboard.cfl.ca/json/scoreboard/rounds.json',
    'attribution': 'Data provided by cflscoreboard.cfl.ca',
    'balls': None,
    'clock': None,
    'date': None,
    'down_distance_text': None,
    'event_id': None,
    'event_name': None,
    'event_url': 'https://www.cfl.ca/games/None',
    'friendly_name': 'test_invalid_team',
    'icon': 'mdi:scoreboard',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://1000logos.net/wp-content/uploads/2021/06/Canadian-Football-League-CFL-logo-500x281.png',
    'league_name': 'Canadian Football League',
    'league_path': 'cfl',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': None,
    'opponent_logo': None,
    'opponent_long_name': None,
    'opponent_name': None,
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': None,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': None,
    'series_summary': None,
    'sport': 'football',
    'sport_path': 'cflscoreboard',
    'state': 'NOT_FOUND',
    'strikes': None,
    'team_abbr': 'INVALID_TEAM_ID',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': None,
    'team_logo': None,
    'team_long_name': None,
    'team_name': None,
    'team_rank': None,
    'team_record': None,
    'team_score': None,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': None,
  })
# ---
# name: test_cflscoreboard[test_post]
  dict({
    'api_message': None,
    'api_url': 'https://cflscoreboard.cfl.ca/json/scoreboard/rounds.json',
    'attribution': 'Data provided by cflscoreboard.cfl.ca',
    'balls': None,
    'clock': '00:00',
    'date': '2026-05-22T23:00:00+00:00',
    'down_distance_text': None,
    'event_id': '6583',
    'event_name': 'OTT@MTL',
    'event_url': 'https://www.cfl.ca/games/6583',
    'friendly_name': 'test_post',
    'icon': 'mdi:scoreboard',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://1000logos.net/wp-content/uploads/2021/06/Canadian-Football-League-CFL-logo-500x281.png',
    'league_name': 'Canadian Football League',
    'league_path': 'cfl',
    'location': None,
    'odds': 'OTT +275',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'MTL',
    'opponent_colors': list([
      '#021D49',
      '#D0202E',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '86680',
    'opponent_logo': 'https://gsm-shared-assets.betstream.betgenius.com/shared/assets/sports/american-football/competitors/logos/svg/86680.svg',
    'opponent_long_name': 'Montreal Alouettes',
    'opponent_name': 'Alouettes',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': 12,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': 1,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.montrealalouettes.com',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': 'PRE',
    'series_summary': None,
    'sport': 'football',
    'sport_path': 'cflscoreboard',
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'OTT',
    'team_colors': list([
      '#C8102E',
      '#000000',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '88019',
    'team_logo': 'https://gsm-shared-assets.betstream.betgenius.com/shared/assets/sports/american-football/competitors/logos/svg/88019.svg',
    'team_long_name': 'Ottawa RedBlacks',
    'team_name': 'RedBlacks',
    'team_rank': None,
    'team_record': None,
    'team_score': 27,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': 2,
    'team_total_shots': None,
    'team_url': 'https://www.ottawaredblacks.com',
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': None,
    'venue': None,
  })
# ---
# name: test_cflscoreboard[test_pre]
  dict({
    'api_message': None,
    'api_url': 'https://cflscoreboard.cfl.ca/json/scoreboard/rounds.json',
    'attribution': 'Data provided by cflscoreboard.cfl.ca',
    'balls': None,
    'clock': '00:00',
    'date': '2026-05-23T23:00:00+00:00',
    'down_distance_text': None,
    'event_id': '6585',
    'event_name': 'WPG@SSK',
    'event_url': 'https://www.cfl.ca/games/6585',
    'friendly_name': 'test_pre',
    'icon': 'mdi:scoreboard',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://1000logos.net/wp-content/uploads/2021/06/Canadian-Football-League-CFL-logo-500x281.png',
    'league_name': 'Canadian Football League',
    'league_path': 'cfl',
    'location': None,
    'odds': 'SSK +195',
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'WPG',
    'opponent_colors': list([
      '#041E42',
      '#A7A8AA',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '110380',
    'opponent_logo': 'https://gsm-shared-assets.betstream.betgenius.com/shared/assets/sports/american-football/competitors/logos/svg/110380.svg',
    'opponent_long_name': 'Winnipeg Blue Bombers',
    'opponent_name': 'Blue Bombers',
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': 0,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': 0,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.bluebombers.com',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': 'PRE',
    'series_summary': None,
    'sport': 'football',
    'sport_path': 'cflscoreboard',
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'SSK',
    'team_colors': list([
      '#006341',
      '#FFFFFF',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '106752',
    'team_logo': 'https://gsm-shared-assets.betstream.betgenius.com/shared/assets/sports/american-football/competitors/logos/svg/106752.svg',
    'team_long_name': 'Saskatchewan Roughriders',
    'team_name': 'Roughriders',
    'team_rank': None,
    'team_record': None,
    'team_score': 0,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': 0,
    'team_total_shots': None,
    'team_url': 'https://www.riderville.com',
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': None,
    'venue': None,
  })
# ---
